--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -328,9 +328,13 @@ header{
 .card-icon{
     position: relative;
     width: 100%;
+    margin-top: 0;
 }
+
 .card-icon img{
     width: 100%;
+    height: 450px;
+    margin-bottom: 2%;
 }
 .button-card{
     position: absolute;
@@ -475,7 +479,7 @@ footer{
   display: none;
   color: #1c1c1c;
 }
-.galleryopened{
+.galleryopened{ 
   display: none;
   width: 100%;
 }
@@ -530,3 +534,41 @@ margin-bottom: 2%;
   font-size: 5em;
   color: grey
 }
+
+#hotopen1{
+  display: none;
+}
+#hotopen2{
+  display: none;
+}
+#hotopen3{
+  display: none;
+}
+#hotopen4{
+  display: none;
+}
+#hotopen5{
+  display: none;
+}
+#hotopen6{
+  display: none;
+}
+#hotopen7{
+  display: none;
+}
+#hotopen8{
+  display: none;
+}
+#hotopen9{
+  display: none;
+}
+#hotopen10{
+  display: none;
+}
+#hotopen11{
+  display: none;
+}
+#hotopen12{
+  display: none;
+}
+
